Configure gatling junit tests